--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TEST</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+     <link type="text/css" rel="stylesheet" href="{% static 'styles.css' %}">
+    <title>SAS Request Tracker</title>
   </head>
   <body>
+
+  <div class="container-fluid" >
+    <div class="carousel" style="margin: 0px;background-color:#0f0f0f;">
+        <h1 style="font-variant: small-caps;color:#e38d13;">&nbsp;&nbsp;</i>SAS Security Request Tracker</h1>
+{#        <div style="float:right;color:#e38d13;margin-right: 15px;">#}
+{#        </div><br/>#}
+
+        <nav class="navbar-collapse" style="padding-left: 20px;">
+        <a title="All request" class="navbar-brand" href="{%  url 'entry_list' %}"><i class="fa fa-list my-icon">&nbsp;&nbsp;All requests</i></a>
+        <a title="Add a request" class="navbar-brand"    href="{%  url 'entry_add' %}"><i class="fa fa-plus-circle my-icon">&nbsp;&nbsp;New request</i></a>
+        </nav>
+    </div>
+  </div>
+
     <div id="container">
       <div id="content">
       {% block content %}
