--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
      <link type="text/css" rel="stylesheet" href="{% static 'styles.css' %}">
     <title>SAS Request Tracker</title>
@@ -32,5 +33,18 @@
       {% endblock %}
       </div>
     </div>
+  <footer style="margin-top:100px;" >
+    <div class= "navbar navbar-inverse navbar-static-bottom" role="navigation">
+{#    <div class="navbar-text pull-left">#}
+{#    </div>#}
+        <!--Below is the copyright information for the site. You can fill in your own here.-->
+        <div class="container text-center">
+            <div>
+            <a href="https://github.com/hopkinss/access_request_tracker"><i style="color:rebeccapurple;" class="fa fa-code"></i>&nbsp;Student Code</a>
+            <a href="https://github.com/UWPCEWebPython/django-blog-2">&nbsp;&nbsp;<i  style="color:rebeccapurple;" class="fa fa-graduation-cap"></i>Teacher Code&nbsp;</a>
+            </div>
+        </div>
+    </div>
+    </footer>
   </body>
 </html>
