Added cancel buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,15 +33,17 @@
       {% endblock %}
       </div>
     </div>
-  <footer style="margin-top:100px;" >
-    <div class= "navbar navbar-inverse navbar-static-bottom" role="navigation">
+  <footer style="margin-top:100px;border-top:1px solid #8d8d8d;background-color:#e8e8e8 ;" >
+    <div class= "navbar navbar-inverse navbar-static-bottom text-muted" role="navigation">
 {#    <div class="navbar-text pull-left">#}
 {#    </div>#}
         <!--Below is the copyright information for the site. You can fill in your own here.-->
         <div class="container text-center">
-            <div>
-            <a href="https://github.com/hopkinss/access_request_tracker"><i style="color:rebeccapurple;" class="fa fa-code"></i>&nbsp;Student Code</a>
-            <a href="https://github.com/UWPCEWebPython/django-blog-2">&nbsp;&nbsp;<i  style="color:rebeccapurple;" class="fa fa-graduation-cap"></i>Teacher Code&nbsp;</a>
+            <div class="text-muted">
+                <a href="https://github.com/hopkinss/access_request_tracker">
+                    <i style="color:rebeccapurple;" class="fa fa-code"></i><i class="text-muted">&nbsp;Student Code</i></a>
+                <a href="https://github.com/UWPCEWebPython/django-blog-2">&nbsp;&nbsp;
+                    <i style="color:rebeccapurple;" class="fa fa-graduation-cap"></i><i class="text-muted">Teacher Code&nbsp;</i></a>
             </div>
         </div>
     </div>
