--- a/trackapp/templates/details.html
+++ b/trackapp/templates/details.html
@@ -44,6 +44,7 @@
                         </td>
                         <td align="center" style="padding-top: 10px;">
                             <button type="submit" class="btn btn-primary">Submit</button>
+                            <a class="btn btn-danger" href="{% url 'entry_list' %}">Cancel</a>
                         </td>
                     </tr>
                 </table>
