--- a/trackapp/templates/index.html
+++ b/trackapp/templates/index.html
@@ -46,6 +46,7 @@
                         </td>
                         <td align="center" style="padding-top: 10px;">
                             <button type="submit" class="btn btn-primary">Submit</button>
+                            <a class="btn btn-danger" href="{% url 'entry_list' %}">Cancel</a>
                         </td>
                         <td id="t1">
 
